Bug 485776 - Issues with price dialog
Summary: Issues with price dialog
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-19 07:00 UTC by Ralf Habacker
Modified: 2024-05-05 11:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-04-19 07:00:45 UTC
STEPS TO REPRODUCE
1. build kmymoney from git master branch 
2. create a new file
3. add additional currency (menu extra->currency)
4. Show price dialog (menu extra->prices)
5. Add new price using the first and second currency
6. Save file
7. Delete new price

OBSERVED RESULT
1. After step 5. the source column is empty
2. after step 6, the untranslated term "user" is displayed in the source column, whereas in the previous kmymoney main version the term is displayed translated
3. After step 7 the newly added price is still present and could not be deleted

EXPECTED RESULT
The problems mentioned should not occur.

SOFTWARE/OS VERSIONS
Linux: openSUSE Leap 15.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Comment 1 Ralf Habacker 2024-04-19 08:29:41 UTC
I ran another test with a current craft build and found that the problems were no longer present.
Comment 2 Ralf Habacker 2024-04-19 08:51:47 UTC
(In reply to Ralf Habacker from comment #1)
> I ran another test with a current craft build and found that the problems
> were no longer present.

Since craft uses the stable branch by default, this test was performed with a build from the 5.1 branch, where the problem does not occur. The problem still exists in the master branch.
Comment 3 Thomas Baumgart 2024-05-05 11:08:35 UTC
Git commit c6a5bf656361962c274bff26e4c51463052de4b9 by Thomas Baumgart.
Committed on 05/05/2024 at 11:05.
Pushed by tbaumgart into branch 'master'.

Port price dialog to use model code
FIXED-IN: 5.2

M  +201  -236  kmymoney/dialogs/kmymoneypricedlg.cpp
M  +0    -8    kmymoney/dialogs/kmymoneypricedlg.h
M  +19   -38   kmymoney/dialogs/kmymoneypricedlg.ui
M  +8    -0    kmymoney/mymoney/mymoneyenums.h
M  +31   -7    kmymoney/mymoney/storage/pricemodel.cpp

https://invent.kde.org/office/kmymoney/-/commit/c6a5bf656361962c274bff26e4c51463052de4b9