Port price dialog to use model code

BUG: 485776
FIXED-IN: 5.2